--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 28.01.2022 08:33:26</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 28.01.2022 09:12:01</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -24,7 +24,42 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 28.1.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Mango cheesecake  (bez lepku) </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Čokoládový cheesecake s pomerančem </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Bramborová polévka s lesními houbami - samostatně  <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Bramborová polévka s lesními houbami - s menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Chilli con carne, jalapeňos, rýže basmati, zakysaná smetana <em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>300g Bramborové gnocchi v tomatové omáčce, grilovaná zelenina, mozzarella, bazalka <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -101,7 +136,7 @@ s cuketou, restovanou hlívou ústřičnou a omáčkou z portského vína
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z norskeho slede s jablecno-rajcatovou salsou, pohanka s pecenou zeleninou, salatek 139</li><li>Peceny filet z cerstveho jihoceskeho candata s jablecno-rajcatovou salsou, pohanka s pecenou zeleninou, salatek 175</li><li>Pad kra pao – kruti kousky s thajskou bazalkou, fazolovymi lusky, chilli a sazenym vejcem, jasminova ryze, salatek 139</li><li>Grilovane danci a kanci medailonky s houbovou omackou s lanyzovym olejem, bramborove placky, salatek ( L ) 175</li><li>Burrito s pecenymi lilky, paprikami a syrem halloumi, cervena cocka s cizrnou. salatek ( L ) 139</li></ol>
+<ol><li>Peceny filet z cerstveho jihoceskeho pstruha s citronovym pak coj a morskymi rasami, korenena ryze s beluga cockou, salatek 139</li><li>Smazeny filet z cerstve bile tresky s kaparovou majonezou, stouchane brambory s cibulkou, salatek {L} 169</li><li>Kasmirsky pikantni hovezi rogan josh s rajcaty, vonavym korenim, zazvorem a lzici jogurtu, jasminova ryze, salatek 139</li><li>Grilovane medailonky z krutich prsou s cibulovo-limetkovym dzemem, gratinovane brambory, salatek 169</li><li>Maghrebska zapecena rajcatova saksuka s vejcem a balkanskym syrem, korenena ryze s beluga cockou, salatek 139</li></ol>
 </td>
 </tr>
 </table>
