--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 30.01.2022 13:49:57</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 31.01.2022 06:09:10</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Neděle, 30. 01. 2022</h5>
+<h5>Pondělí, 31. 01. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Velice se omlouváme, ale do 28.1. je jídelna zavřena. :(Pozn.: NEJDE O COVID</strong>
@@ -22,9 +22,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Neděle 30.1.2022</div>
+<div class="nadpis">Pondělí 31.1.2022</div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -35,19 +35,16 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná s klobásou</td><td class="menuPrice">39,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Květákový krém se zakysanou smetanou</td><td class="menuPrice">39,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Předkrm</h5><tr><td class="menuWeight">150g</td><td class="menuName">Gothajský salám z Maso Jičín s cibulí, octem a feferonkou, kváskový chléb</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Restované plátky gothaje z Maso Jičín na dijonské hořčici s majonézou, kváskový chléb</td><td class="menuPrice">59,-</td></tr></tbody>
+<h5 class="border_box_title">Předkrm </h5><tr><td class="menuWeight">150g</td><td class="menuName">Gothajský salám z Maso Jičín s cibulí, octem a feferonkou, kváskový chléb</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Restované plátky gothaje z Maso Jičín na dijonské hořčici s majonézou, kváskový chléb</td><td class="menuPrice">59,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažená vepřová kotleta bez kosti, vařené brambory s máslem a šnitlíkem, citrón</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí guláš s feferonkou a cibulí, naše bramboráčky</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Plněné bramborové knedlíky uzeným masem, dušené bílé zelí, škvarky s cibulí</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s opečenou klobásou, pečené brambory s kmínem. mexický dip</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Instapivo</td><td class="menuName">Pokud jsi stálý sledující naše instagramového profilu "senkyrna7", tak máš čepovaný Staropramen 11° 0,5L pouze za 26,-Kč neomezeně. Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu obsluze. Platí i pro odnos piva s sebou.</td><td class="menuPrice">26,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Do růžova pečená vepřová panenka,  gratinovaná brokolice se sýrem, celerové pyré, vařené vejce, rukola</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny fusili s tomatovou omáčkou a čerstvou bazalkou, filírovaná kuřecí prsa, parmazán</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na smetanové pepřové omáčce, restované špecle</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny ochucené citrónovým dresinkem, řezy z vepřové panenky </td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">2 + 1</td><td class="menuName">Staropramen  EXTRA CHMELENÁ 12% - Dej si dva čepované ležáky a domů za věrnost dostaneš 0,5l plechovku, není množstevně omezeno, vypiješ " dvacet kousku "  a dostaneš 10 plechovek</td><td class="menuPrice">84,-</td></tr><tr><td class="menuWeight">1 + 1</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažený sýr (45%) vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rajská omáčka se sekanými vepřovými koulemi, těstoviny kolínka</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Kapsa z vepřové pečeně na roštu plněná šunkou, vejci a žampiony, smažené bramborové hranolky</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na tálu se slaninou a volským okem, smažené hranolky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Nadívaný vepřový bůček, bramborové knedlíky opečené na tálu, špenát</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: Kuřecí kapsa plněná šunkou, žampiony a vařeným vejcem, hráškové pyré, grilované rajče s bazalkovým pestem, parmazán</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">Instapivo</td><td class="menuName">Pokud jsi stálý sledující naše instagramového profilu "senkyrna7", tak máš čepovaný Staropramen 11° 0,5L pouze za 26,-Kč neomezeně. Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu obsluze. Platí i pro odnos piva s sebou.</td><td class="menuPrice">26,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně s jemnou pepřovou omáčkou, smažené hranolky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linquine ala carbonara, kuřecí nudličky, parmazán</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuskusový salát se zeleninou, promíchaný citrónovým dresinkem, kuřecí stripsy, vařené vejce</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">2 + 1</td><td class="menuName">Staropramen  EXTRA CHMELENÁ 12% - Dej si dva čepované ležáky a domů za věrnost dostaneš 0,5l plechovku, není množstevně omezeno, vypiješ " dvacet kousku "  a dostaneš 10 plechovek</td><td class="menuPrice">84,-</td></tr><tr><td class="menuWeight">1 + 1</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">TIP</td><td class="menuName">Dukátové buchtičky s vanilkovým šodo, šlehačkou a karamelem</td><td class="menuPrice">55,-</td></tr></tbody>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">TIP</td><td class="menuName">Dukátové buchtičky s vanilkovým šodo, šlehačkou a karamelem</td><td class="menuPrice">65,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
@@ -61,34 +58,33 @@
 <table class="dm">
 <tbody>
 <tr>
-<td class="amount">100 g</td>
-<td class="title">Kachní rillettes s marinovanými šalotkami
-a naším kmínovým chlebem 1ab,3,7,12</td>
-<td class="pricem">139 Kč</td>
+<td class="amount">150 g</td>
+<td class="title">Anglický roastbeef se salátem frissé s kaparovou majonézou
+		a rozpečenou bylinkovou bagetou 1a,3,7,10</td>
+<td class="pricem">185 Kč</td>
 </tr>
 <tr>
 <td class="amount"></td>
-<td class="title">Pravý ruský boršč z hovězí oháňky, uzených vepřových žeber,
-kořenové zeleniny a červené řepy	 se zakysanou smetanou 7,9</td>
-<td class="pricem">75 Kč</td>
+<td class="title">Polévka z červené čočky s kořenovou zeleninou, řapíkatým celerem,
+drcenými rajčaty a chorizo klobásou 1a,9</td>
+<td class="pricem">69 Kč</td>
+</tr>
+<tr>
+<td class="amount">250 g</td>
+<td class="title">Grilované kuřecí prso Supreme s omáčkou z pečených paprik,
+		bramborovo hráškovým pyré a glazovanou mrkví 1a,7</td>
+<td class="pricem">215 Kč</td>
 </tr>
 <tr>
 <td class="amount">150 g</td>
-<td class="title">Pečená krůtí roláda plněná naší slaninovou nádivkou se špenátem
-s bramborovými knedlíky s opečenou houskou 1a,3,7</td>
-<td class="pricem">169 Kč</td>
-</tr>
-<tr>
-<td class="amount">200 g</td>
-<td class="title">Grilované medailonky z vepřové panenky na krémovém rizotu
-s cuketou, restovanou hlívou ústřičnou a omáčkou z portského vína
-7,12	</td>
-<td class="pricem">225 Kč</td>
+<td class="title">Massaman curry s kousky lososa, zeleninou, zelenými fazolkami,
+		kokosovým mlékem a koriandrem s jasmínovou rýží 4,6</td>
+<td class="pricem">265 Kč</td>
 </tr>
 <tr>
 <td class="amount"></td>
-<td class="title">Hruškový závin s vlašskými ořechy a vanilkovým krémem 1a,3,7,8c</td>
-<td class="pricem">85 Kč</td>
+<td class="title">Domácí makovec s kaštanovým mascarpone 1a,3,7</td>
+<td class="pricem">89 Kč</td>
 </tr>
 </tbody>
 </table>
@@ -96,7 +92,7 @@ s cuketou, restovanou hlívou ústřičnou a omáčkou z portského vína
 </tr>
 <tr>
 <td>
-<table class="dm"></table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Žampionový krém 1a,7</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Segedínský guláš z vepřového ramínka a kysaného zelí s našimi houskovými knedlíky 1a,3,7,12</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Quesadilla s hovězím ragú, čedarem, rajčatovou salsou, zakysanou smetanou a trhaným salátem 1a,3,7,10</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Zeleninový salát se smaženou uzenou nivou, slaninovými chipsy, bylinkovou majonézou a rozpečenou bylinkovou bagetou 1a,3,7,10</td><td class="pricem">135 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
