--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 31.01.2022 07:41:59</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 31.01.2022 08:10:40</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,10 +7,38 @@
 <h5>Pondělí, 31. 01. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Velice se omlouváme, ale do 28.1. je jídelna zavřena. :(Pozn.: NEJDE O COVID</strong>
+<strong>Cibulová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							0,-
+							35,-
+						</span>
+</p>
+<p>
+<strong>Znojemská Vepřová plec s rýží</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							135,-
+						</span>
+</p>
+<p>
+<strong>Sekaná s vejcem s vařeným bramborem a hořčicí</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							133,-
+						</span>
+</p>
+<p>
+<strong>Teplý bufet</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							35,-
+						</span>
+</p>
+<p>
+<strong>Salátový bufet</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							45,-
 						</span>
 </p>
 </div>
